files for deployd

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,11 @@
         "language": "typescript",
         "autoFix": true
     }
-  ]
+  ],
+  "appService.zipIgnorePattern": [
+    "node_modules{,/**}",
+    ".vscode{,/**}"
+  ],
+  "appService.defaultWebAppToDeploy": "/subscriptions/3b11a0c1-df36-4710-b1cc-0d4f2632e8f9/resourceGroups/tecgroup/providers/Microsoft.Web/sites/api-scan-tec",
+  "appService.deploySubpath": ""
 }
